# language-world

./: .env  .gitignore  LICENSE  README.md  exps.py  mt10_plans.py  mt10_plans_v1.py  mt50_plans.py  mt50_plans_new.py  mt50_plans_projected.py  mt50_plans_v0.py  mt50_plans_v1.py  mt50_plans_v2_from_demonstrations_merged.py  mt50_plans_v2_unscored.py  mt50_x10_plans.py  pyproject.toml  setup.py
data/: all_prompts.json  cond_agent_fewshot-results-1111.ndjson  cond_agent_fewshot-results-2222.ndjson  cond_agent_fewshot-results-3333.ndjson  cond_agent_fewshot-results-4444.ndjson  cond_agent_mini_oneshot-results-assembly-1111.ndjson  cond_agent_mini_oneshot-results-assembly-2222.ndjson  cond_agent_mini_oneshot-results-assembly-3333.ndjson  cond_agent_mini_oneshot-results-assembly-4444.ndjson  cond_agent_mini_oneshot-results-basketball-1111.ndjson  cond_agent_mini_oneshot-results-basketball-2222.ndjson  cond_agent_mini_oneshot-results-basketball-3333.ndjson  cond_agent_mini_oneshot-results-basketball-4444.ndjson  cond_agent_mini_oneshot-results-bin-picking-1111.ndjson  cond_agent_mini_oneshot-results-bin-picking-2222.ndjson  cond_agent_mini_oneshot-results-bin-picking-3333.ndjson  cond_agent_mini_oneshot-results-bin-picking-4444.ndjson  cond_agent_mini_oneshot-results-box-close-1111.ndjson  cond_agent_mini_oneshot-results-box-close-2222.ndjson  cond_agent_mini_oneshot-results-box-close-3333.ndjson  cond_agent_mini_oneshot-results-box-close-4444.ndjson  cond_agent_mini_oneshot-results-button-press-1111.ndjson  cond_agent_mini_oneshot-results-button-press-2222.ndjson  cond_agent_mini_oneshot-results-button-press-3333.ndjson  cond_agent_mini_oneshot-results-button-press-4444.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-1111.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-2222.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-3333.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-4444.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-wall-1111.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-wall-2222.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-wall-3333.ndjson  cond_agent_mini_oneshot-results-button-press-topdown-wall-4444.ndjson  cond_agent_mini_oneshot-results-button-press-wall-1111.ndjson  cond_agent_mini_oneshot-results-button-press-wall-2222.ndjson  cond_agent_mini_oneshot-results-button-press-wall-3333.ndjson  cond_agent_mini_oneshot-results-button-press-wall-4444.ndjson  cond_agent_mini_oneshot-results-coffee-button-1111.ndjson  cond_agent_mini_oneshot-results-coffee-button-2222.ndjson  cond_agent_mini_oneshot-results-coffee-button-3333.ndjson  (+989 more)
exp_data/: cond_agent_v0_results_no_mix.json  cond_agent_v0_success_rate_one_shot.json  cond_agent_v0_success_rate_zero_shot.json  cond_agent_v1_fewshot-assembly.json  cond_agent_v1_fewshot-basketball.json  cond_agent_v1_fewshot-bin-picking.json  cond_agent_v1_fewshot-button-press-topdown-wall.json  cond_agent_v1_fewshot-button-press-topdown.json  cond_agent_v1_fewshot-button-press-wall.json  cond_agent_v1_fewshot-button-press.json  cond_agent_v1_fewshot-coffee-button.json  cond_agent_v1_fewshot-coffee-pull.json  cond_agent_v1_fewshot-coffee-push.json  cond_agent_v1_fewshot-dial-turn.json  cond_agent_v1_fewshot-disassemble.json  cond_agent_v1_fewshot-door-lock.json  cond_agent_v1_fewshot-door-open.json  cond_agent_v1_fewshot-door-unlock.json  cond_agent_v1_fewshot-faucet-close.json  cond_agent_v1_fewshot-faucet-open.json  cond_agent_v1_fewshot-handle-press-side.json  cond_agent_v1_fewshot-handle-press.json  cond_agent_v1_fewshot-handle-pull-side.json  cond_agent_v1_fewshot-lever-pull.json  cond_agent_v1_fewshot-peg-unplug-side.json  cond_agent_v1_fewshot-pick-place.json  cond_agent_v1_fewshot-plate-slide-back-side.json  cond_agent_v1_fewshot-plate-slide-back.json  cond_agent_v1_fewshot-plate-slide-side.json  cond_agent_v1_fewshot-plate-slide.json  cond_agent_v1_fewshot-reach-wall.json  cond_agent_v1_fewshot-reach.json  cond_agent_v1_fewshot-window-close.json  cond_agent_v1_fewshot-window-open.json  cond_agent_v1_fewshot_no_mix-assembly.json  cond_agent_v1_fewshot_no_mix-bin-picking.json  (+226 more)
src/: gpt3.py  (+63 more)
(+18615 files in other folders)
