[tool.poetry]
name = "language-to-policies"
version = "0.1.0"
description = ""
authors = ["K.R. Zentner <krzentner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
openai = "^0.18.1"
python-dotenv = "^0.20.0"
scipy = "^1.8.1"
Pillow = "^9.1.1"
plotly = "^5.8.2"
pandas = "^1.4.2"
pytest = "^7.1.2"
ftfy = "^6.1.1"
regex = "^2022.6.2"
tqdm = "^4.64.0"
fvcore = "^0.1.5"
imageio = "^2.19.3"
imageio-ffmpeg = "^0.4.7"
pybullet = "^3.2.5"
moviepy = "^1.0.3"
easydict = "^1.9"
gdown = "^4.4.0"
opencv-python = "^4.6.0"
tensorflow = "^2.9.1"
tensorflow-hub = "^0.12.0"
clize = "^4.2.1"
pillow = "9.1.1"
metaworld = {path = "metaworld", develop = true}
tensorboardx = "^2.6"
lightning = "^2.0.2"
mpire = "^2.7.1"
joblib = "^1.2.0"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
PyQt5 = "5.15.7"
ipdb = "^0.13.9"
ray = "^2.4.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
venv = ".venv"
